# fastapi-vslice

./: .bandit  .env.dist  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README  README.md  docker-compose.yml  main.py  pyproject.toml
assets/: styles.css
fastapi_vslice/: database.py  main.py
fastapi_vslice/conf/: settings.py
fastapi_vslice/crud/: device.py
fastapi_vslice/features/activate_device/: activate_device.html  activate_device_command.py
fastapi_vslice/features/create_device/: create_device.html  create_device_command.py  create_device_form.py
fastapi_vslice/features/deactivate_device/: deactivate_device.html  deactivate_device_command.py
fastapi_vslice/features/list_devices/: list_devices.html  list_devices_query.py
fastapi_vslice/models/: device.py
fastapi_vslice/routers/: device.py
fastapi_vslice/routers/api/: device.py
fastapi_vslice/schemas/: device.py
fastapi_vslice/scripts/: load_fixtures.py
fastapi_vslice/shared/: database.py
fastapi_vslice/templates/: base.html  home.html
templates/: home.html
tests/: conftest.py
tests/features/activate_device/: test_activate_device.py
tests/features/create_device/: test_create_device.py  test_create_device_form.py
tests/features/deactivate_device/: test_deactivate_device.py
tests/features/list_devices/: test_list_devices.py  test_list_devices_query.py
