[tool.poetry]
name = "fastapi-vslice"
version = "0.1.0"
description = ""
authors = ["Massimo Biagioli <biagiolimassimo@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_vslice"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.4"
Jinja2 = "^3.1.2"
python-multipart = "^0.0.5"
requests = "^2.28.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.19.0"
pytest-mock = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
